# lsc

./: Dockerfile  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
app/: main.py
app/api/: deps.py  main.py
app/api/routes/: auth.py  signup.py
app/core/: config.py  db.py  security.py
app/migrations/: env.py
app/models/: abstract.py  enum.py  location.py  user.py
app/schemas/: __init__.py  token.py  user.py
app/services/: token.py  user.py
app/utils/: validators.py
