[project]
name = "lsc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.8.1",
    "python-jose[cryptography]>=3.4.0",
    "ruff>=0.11.2",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
]
